--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
           "input-otp": "^1.4.2",
           "lucide-react": "^0.487.0",
           "next-themes": "^0.4.6",
+          "pdfjs-dist": "^4.4.168",
           "react": "^18.3.1",
           "react-day-picker": "^8.10.1",
           "react-dom": "^18.3.1",
@@ -45,7 +46,8 @@
           "recharts": "^2.15.2",
           "sonner": "^2.0.3",
           "tailwind-merge": "*",
-          "vaul": "^1.1.2"
+          "vaul": "^1.1.2",
+          "jszip": "^3.10.1"
       },
       "devDependencies": {
           "@types/node": "^20.10.0",
