--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Next.js build output
+.next/
+out/
+
+# Vite build output
+/dist/
+
+# TypeScript
+*.tsbuildinfo
+
+# Logs and diagnostics
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Editor directories and files
+.idea/
+.vscode/
+*.sw?
+
+# Testing and coverage
+coverage/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Misc cache
+.sass-cache/
+.cache/
+.next-static/
+.turbo/
+.swc/
+
