--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.487.0",
+    "mobx": "^6.13.3",
+    "mobx-react-lite": "^4.0.6",
+    "next": "^14.2.5",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^4.10.38",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
@@ -50,11 +53,17 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "typescript": "^5.4.5",
     "vite": "6.3.5"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "build": "next build",
+    "build:vite": "vite build",
+    "dev": "next dev",
+    "dev:vite": "vite",
+    "start": "next start"
   }
 }
