--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,70 @@
-node_modules
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+build/
+dist/
+.vite/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Temporary files
+tmp/
+temp/
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# Docker files (not needed for local development)
+Dockerfile
+docker-compose.yml
+nginx.conf
+deploy.sh
+
+# AI/ML model files
+*.pkl
+*.h5
+*.pb
+
+# Large media files
+*.mp4
+*.avi
+*.mov
+*.mkv
