--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "openai": "^6.3.0",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -55,6 +56,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite preview --port 3000 --host"
   }
 }
